--- a/MyCity4Kids/MyCity4Kids/res/drawable/dot_img.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/dot_img.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
    <solid 
-       android:color="@color/grey"/>
+       android:color="@color/black"/>
 
    <size 
        android:width="8dp"
