--- a/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/topics_splash_activity.xml
@@ -126,6 +126,36 @@
         android:layout_below="@+id/selectLabelTextView"
         android:divider="@null" />
 
+    <LinearLayout
+        android:id="@+id/selectAll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/selectLabelTextView"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/selectDeselectAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/search_topics_transparent_bg">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:text="SELECT ALL"
+                android:textColor="@color/black" />
+        </LinearLayout>
+    </LinearLayout>
+
     <RelativeLayout
         android:id="@+id/selectedCategoriesView"
         android:layout_width="match_parent"
