--- a/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/edit_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,10 +16,28 @@
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title" />
 
-    <LinearLayout
+    <!--<ProgressBar-->
+    <!--android:id="@+id/progress_bar"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerInParent="true" />-->
+
+    <TextView
+        android:id="@+id/noDataFoundTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="Unable to fetch user data"
+        android:visibility="invisible" />
+
+    <LinearLayout
+        android:id="@+id/fieldsLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:orientation="vertical"
+        android:visibility="invisible">
 
         <EditText
             android:id="@+id/editFirstName"
@@ -114,4 +132,4 @@
             android:layout_height="1dp"
             android:background="@color/gray_color" />
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
