--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -119,8 +119,9 @@
 
     <color name="ad.title">#333333</color>
     <color name="ad.tags.text">#707070</color>
-    <color name="ad.tags.bg">#fafafa</color>
+    <color name="ad.tags.bg">#e9e9e9</color>
     <color name="ad.fab.bg">#fafafa</color>
+    <color name="ad.recommend.tooltip.bg">#4185f2</color>
 
     <color name="search.tablayout.bg">#f1f1f1</color>
     <color name="search.tablayout.selectedtabtext">#ec3b57</color>
@@ -129,9 +130,11 @@
 
     <color name="authortype.colorcode.blogger">#0ea2e8</color>
     <color name="authortype.colorcode.expert">#7db412</color>
+    <color name="authortype.colorcode.featured">#7db412</color>
     <color name="authortype.colorcode.editorial">#e96e01</color>
     <color name="authortype.colorcode.editor">#5d71ca</color>
     <color name="articlelist.background">#EBFFFFFF</color>
+    <color name="articlelist.reason.text">#737373</color>
 
     <color name="fab.pink">#ec3b57</color>
 
@@ -157,4 +160,5 @@
 
     <color name="analytics.engagement.graph">#ABC4F8</color>
 
+    <color name="card_listing.stats">#737373</color>
 </resources>
