--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -68,4 +68,6 @@
     <dimen name="ad_related_article_image_height">50dp</dimen>
     <dimen name="ad_related_article_image_width">70dp</dimen>
     <dimen name="ad_related_article_title">14sp</dimen>
+
+    <dimen name="article_listing.article_image">220dp</dimen>
 </resources>
