Video Blogs Listing + Hindi Category + Featured Author

--- a/MyCity4Kids/MyCity4Kids/res/layout/blog_filter_activity_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/blog_filter_activity_layout.xml
@@ -19,7 +19,7 @@
             android:padding="15dp"
             android:text="Name (A-Z)"
             android:textColor="@color/black_color"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/rank_name"
@@ -28,7 +28,7 @@
             android:padding="15dp"
             android:text="Rank"
             android:textColor="@color/black_color"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/bloggers"
@@ -36,8 +36,7 @@
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="Bloggers"
-            android:textColor="@color/black_color"
-       />
+            android:textColor="@color/black_color" />
 
         <TextView
             android:id="@+id/experts"
@@ -54,12 +53,21 @@
             android:padding="15dp"
             android:text="Editors"
             android:textColor="@color/black_color" />
+
         <TextView
             android:id="@+id/editorialTeam"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             android:text="Editorial Team"
+            android:textColor="@color/black_color" />
+
+        <TextView
+            android:id="@+id/featuredAuthor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:text="Featured Author"
             android:textColor="@color/black_color" />
     </LinearLayout>
 
