--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_mc4k_home.xml
@@ -23,12 +23,22 @@
                 android:layout_height="wrap_content" />
 
             <com.mycity4kids.widget.HorizontalScrollCustomView
+                android:id="@+id/funnyVideosSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <com.mycity4kids.widget.HorizontalScrollCustomView
                 android:id="@+id/trendingSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <com.mycity4kids.widget.HorizontalScrollCustomView
                 android:id="@+id/momspressoSection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <com.mycity4kids.widget.HorizontalScrollCustomView
+                android:id="@+id/hindiSection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
