--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -130,7 +130,7 @@
 
     <color name="authortype.colorcode.blogger">#0ea2e8</color>
     <color name="authortype.colorcode.expert">#7db412</color>
-    <color name="authortype.colorcode.featured">#7db412</color>
+    <color name="authortype.colorcode.featured">#7f1109</color>
     <color name="authortype.colorcode.editorial">#e96e01</color>
     <color name="authortype.colorcode.editor">#5d71ca</color>
     <color name="articlelist.background">#EBFFFFFF</color>
