--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -188,6 +188,30 @@
                 android:text="Feedback"
                 android:textColor="@color/navigation.drawer.endtext" />
         </LinearLayout>
-    </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/addVideosTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:padding="20dp"
+                android:text="Add Videos"
+                android:textColor="@color/navigation.drawer.endtext" />
+
+            <TextView
+                android:id="@+id/myVideosTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:fontFamily="sans-serif-light"
+                android:padding="20dp"
+                android:text="My Videos"
+                android:textColor="@color/navigation.drawer.endtext" />
+        </LinearLayout>
+    </LinearLayout>
 </ScrollView>
