--- a/MyCity4Kids/MyCity4Kids/res/values/styles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/styles.xml
@@ -253,4 +253,13 @@
         <item name="spinBars">true</item>
         <item name="color">@color/colorControlNormal</item>
     </style>
+
+    <style name="MyAlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/black</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/black</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/white_color</item>
+    </style>
 </resources>
