--- a/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/article_image_tag_publish.xml
@@ -13,7 +13,7 @@
         android:background="@color/primary"
         android:elevation="5dp"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ToolbarTheme"
+        app:theme="@style/FilterToobar"
         app:titleTextAppearance="@style/ToolbarTheme.Title" />
 
     <TextView
@@ -26,31 +26,136 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:text="Add an image to go with your article (or use the default image)"
-        android:textSize="20sp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp"
+        android:text="@string/publish_article.upload_image.title"
+        android:textSize="20sp" />
 
-        />
-
-    <ImageView
-        android:id="@+id/articleImage"
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_below="@id/textMessage"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:scaleType="center"
-        android:src="@drawable/default_article" />
-
-
-    <Button
-        android:id="@+id/publish"
+    <android.support.v7.widget.CardView
+        android:id="@+id/uploadImageLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/articleImage"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"
-        android:background="@color/primary_blue"
-        android:text="PUBLISH" />
+        android:layout_below="@id/textMessage"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp">
+
+        <RelativeLayout
+            android:id="@+id/uploadImageContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/grey_light"
+            android:padding="10dp"
+            android:visibility="visible">
+
+            <ImageView
+                android:id="@+id/imvAuthorThumb"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/icon_cam" />
+
+            <TextView
+                android:id="@+id/txvArticleTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imvAuthorThumb"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:maxLines="3"
+                android:paddingTop="5dp"
+                android:singleLine="false"
+                android:text="@string/publish_article.upload_image.click_to_upload_picture"
+                android:textColor="@color/grey"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/articleImage"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_below="@id/textMessage"
+            android:scaleType="center"
+            android:src="@drawable/default_article"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/changePictureTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/uploadImageLayout"
+            android:layout_alignEnd="@+id/uploadImageLayout"
+            android:layout_alignRight="@+id/uploadImageLayout"
+            android:layout_gravity="bottom|right"
+            android:background="@color/publish_article.tag_images.selected_bg"
+            android:padding="5dp"
+            android:text="@string/publish_article.upload_image.change_photo"
+            android:textColor="@color/white_color"
+            android:visibility="gone" />
+    </android.support.v7.widget.CardView>
+
+    <GridView
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/uploadImageLayout"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:horizontalSpacing="5dp"
+        android:numColumns="2"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp"
+        android:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/uploadImageLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp"
+        android:visibility="invisible" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLoadingView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#80000000"
+        android:paddingBottom="5dp"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/sepaartorView"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginBottom="1dp"
+            android:background="#DEDEDE" />
+
+        <TextView
+            android:id="@+id/txvLoadMore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sepaartorView"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/loading_txt"
+            android:textColor="@color/white_color" />
+
+        <ImageView
+            android:id="@+id/imgLoader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sepaartorView"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="4dp"
+            android:layout_toLeftOf="@id/txvLoadMore"
+            android:src="@drawable/progress_spinner" />
+    </RelativeLayout>
+
 
 </RelativeLayout>
