--- a/MyCity4Kids/MyCity4Kids/res/layout/change_city.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/change_city.xml
@@ -2,173 +2,196 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:orientation="vertical">
 
-    <RadioGroup
+    <ListView
+        android:id="@+id/cityListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
         style="@android:style/Theme.Holo.Light"
-        android:id="@+id/radioGroup">
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="wrap_content">
 
         <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Delhi-NCR"
             android:id="@+id/delhiNcr"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Delhi-NCR"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#d3d3d3" />
+
         <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bangalore"
             android:id="@+id/Bangalore"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
             android:buttonTint="@color/primary_blue"
-            />
+            android:paddingLeft="10dp"
+            android:text="Bangalore"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#d3d3d3" />
+
         <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mumbai"
             android:id="@+id/Mumbai"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pune"
-            android:id="@+id/Pune"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hyderabad"
-            android:id="@+id/Hyderabad"
             android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
             android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Chennai"
-            android:id="@+id/Chennai"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Kolkata"
-            android:id="@+id/Kolkata"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Jaipur"
-            android:id="@+id/Jaipur"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Ahmedabad"
-            android:id="@+id/Ahmedabad"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
-            android:buttonTint="@color/primary_blue"/>
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#d3d3d3" />
-        <RadioButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Others"
-            android:id="@+id/Others"
-            android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
-            android:textColor="@color/black_color"
-            android:textSize="18dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="6dp"
             android:buttonTint="@color/primary_blue"
-            android:visibility="invisible"/>
+            android:paddingLeft="10dp"
+            android:text="Mumbai"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Pune"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Pune"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Hyderabad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Hyderabad"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Chennai"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Chennai"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Kolkata"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Kolkata"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Jaipur"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Jaipur"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Ahmedabad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Ahmedabad"
+            android:textColor="@color/black_color"
+            android:textSize="18dp" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#d3d3d3" />
+
+        <RadioButton
+            android:id="@+id/Others"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:buttonTint="@color/primary_blue"
+            android:paddingLeft="10dp"
+            android:text="Others"
+            android:textColor="@color/black_color"
+            android:textSize="18dp"
+            android:visibility="invisible" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dp"
