--- a/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/home_bg"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -17,47 +17,84 @@
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title" />
 
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/chartLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/circleView"
-        android:layout_centerHorizontal="true"
-        android:autoLink="web"
-        android:gravity="center_horizontal"
-        android:text="Uploading ..."
-        android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="6dp"
+        card_view:cardElevation="4dp">
 
-    <com.natasa.progressviews.CircleProgressBar
-        android:id="@+id/circleView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_centerInParent="true"
-        android:layout_margin="20dp"
-        app:bar_width="12dp"
-        app:progress_color="#d3f115"
-        app:progress_width="10dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/cancelTextView"
-        android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:autoLink="web"
+                android:fontFamily="sans-serif-light"
+                android:gravity="center_horizontal"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:text="Uploading ..."
+                android:textColor="@color/black"
+                android:textSize="22sp" />
+
+            <com.natasa.progressviews.CircleProgressBar
+                android:id="@+id/circleView"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_below="@+id/status"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="25dp"
+                android:layout_marginTop="25dp"
+                app:bar_width="12dp"
+                app:bar_color="@color/home_bg"
+                app:progress_color="@color/upload_video.progress.progress_bar"
+                app:progress_width="10dp" />
+
+            <TextView
+                android:id="@+id/cancelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/circleView"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
+                android:text="CANCEL"
+                android:textColor="@color/red_selected"
+                android:textSize="18sp" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/descCardView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/circleView"
-        android:layout_centerHorizontal="true"
-        android:padding="10dp"
-        android:text="Cancel"
-        android:textColor="@color/red_selected"
-        android:textSize="16sp" />
+        android:layout_below="@+id/chartLayout"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="6dp"
+        card_view:cardElevation="4dp">
 
-    <TextView
-        android:id="@+id/descriptionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/cancelTextView"
-        android:layout_centerHorizontal="true"
-        android:padding="20dp"
-        android:text="Please do not exit or kill the app, it will cancel the upload automatically."
-        android:textColor="@color/black"
-        android:textStyle="italic" />
+        <TextView
+            android:id="@+id/descriptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cancelTextView"
+            android:layout_centerHorizontal="true"
+            android:padding="20dp"
+            android:text="Please do not exit or kill the app, it will cancel the upload automatically."
+            android:textColor="@color/black"
+            android:textStyle="italic" />
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
