Notification Read, unread, count + other city changes + color code removal

--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_addchild.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_addchild.xml
@@ -85,6 +85,7 @@
                 android:drawableBottom="@drawable/color_2xxhdpi"
                 android:drawablePadding="5dp"
                 android:hint="@string/colour"
+                android:visibility="gone"
                 android:textColor="@color/black_color" />
 
 
