--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_new_listitem_business.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_new_listitem_business.xml
@@ -18,6 +18,7 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingBottom="3dp"
+            android:paddingLeft="3dp"
             android:paddingTop="3dp">
 
 
@@ -35,7 +36,8 @@
                     android:id="@+id/colorcodeevent"
                     android:layout_width="5dp"
                     android:layout_height="match_parent"
-                    android:orientation="vertical" />
+                    android:orientation="vertical"
+                    android:visibility="gone" />
 
                 <RelativeLayout
                     android:id="@+id/fmlayout"
