--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -159,6 +159,9 @@
     <color name="analytics.engagement.separator">#c7c7c7</color>
     <color name="analytics.engagement.graph">#ABC4F8</color>
 
+    <color name="notification_center.read.bg">#EFEFEF</color>
+    <color name="notification_center.unread.bg">#FFFFFF</color>
+
     <color name="publish_article.tag_images.selected_bg">#80000000</color>
 
     <color name="upload_video.tutorial.learn_more">#ec3b57</color>
