Funny Videos features + New Filter Functionality + mark notification read

--- a/MyCity4Kids/MyCity4Kids/res/layout/filter_topics_dialog.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filter_topics_dialog.xml
@@ -73,7 +73,7 @@
 
     <ListView
         android:id="@+id/subSubTopicsListView"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/toolbar"
