--- a/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_video_details_activity.xml
@@ -24,6 +24,36 @@
         android:padding="20dp"
         android:textColor="@color/black" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/audioTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/music"
+            android:drawablePadding="10dp"
+            android:padding="20dp"
+            android:text="Tap to add music"
+            android:textColor="@color/black" />
+
+        <ImageView
+            android:id="@+id/removeCustomAudioImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:padding="10dp"
+            android:src="@drawable/trash_grey" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey" />
+
     <Switch
         android:id="@+id/muteVideoSwitch"
         android:layout_width="match_parent"
