--- a/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/filtered_topics_articles_activity.xml
@@ -160,13 +160,10 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/midSeparator"
-            android:drawableLeft="@drawable/sort_icon"
-            android:drawablePadding="-50dp"
             android:drawableTint="@color/black"
             android:gravity="center"
-            android:paddingLeft="50dp"
-            android:text="Sort" />
-
+            android:text="SORT" />
+        <!--android:drawableLeft="@drawable/sort_icon"-->
         <View
             android:id="@+id/midSeparator"
             android:layout_width="1dp"
@@ -180,12 +177,50 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_toRightOf="@+id/midSeparator"
-            android:drawableLeft="@drawable/filter"
-            android:drawablePadding="-50dp"
             android:drawableTint="@color/black"
             android:gravity="center"
-            android:paddingLeft="50dp"
-            android:text="Sort" />
+            android:text="FILTER" />
+        <!--android:drawableLeft="@drawable/filter"-->
     </RelativeLayout>
 
+    <FrameLayout
+        android:id="@+id/sortBgLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trans_gray">
+
+        <LinearLayout
+            android:id="@+id/sortingLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:background="@color/white_color"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="5dp"
+                android:text="Sort by" />
+
+            <TextView
+                android:id="@+id/recentSort"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="Recent"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/popularSort"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="Popular"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </FrameLayout>
 </RelativeLayout>
